casinos index remove link to destination/casino

--- a/app/views/casinos/_casino.html.erb
+++ b/app/views/casinos/_casino.html.erb
@@ -1,6 +1,6 @@
 <%= content_tag :tr, class: 'casino' do -%>
 <td>
-	<%= link_to_if casino.destination.present?, casino.name, [casino.destination, casino] do %>
+	<%= link_to_if casino.destination.present?, casino.name, casino do %>
 	<%= link_to casino.name, casino -%>
 	<% end -%>
 </td>
