maps/casinos/show display popup by default

--- a/app/views/maps/casinos/show.html.erb
+++ b/app/views/maps/casinos/show.html.erb
@@ -5,6 +5,7 @@ L.mapbox.featureLayer()
 
 	e.target.eachLayer(function(layer) {
 		map.addLayer(layer);
+		layer.openPopup();
 	});
 
 	map.fitBounds(e.target.getBounds());
