--- a/app/views/casinos/index.html.erb
+++ b/app/views/casinos/index.html.erb
@@ -11,7 +11,7 @@
 
 	<div class="col-sm-12 col-sm-offset-0">
 
-		<div class="thumbnail">
+		<div class="panel panel-default">
 
 			<!-- Nav tabs -->
 			<ul class="nav nav-tabs nav-justified" role="tablist">
