--- a/app/views/layouts/admin/_nav.html.erb
+++ b/app/views/layouts/admin/_nav.html.erb
@@ -21,6 +21,7 @@
 			<%= content_tag :li, link_to('Casinos', admin_casinos_path) -%>
 			<hr>
 			<%= content_tag :li, link_to('Cruises', admin_cruises_path) -%>
+			<%= content_tag :li, link_to('Cruise Lists', admin_cruise_lists_path) -%>
 			<%= content_tag :li, link_to('Ports', admin_ports_path) -%>
 			<%= content_tag :li, link_to('Ships', admin_venues_path) -%>
 			<%= content_tag :li, link_to('Attractions', admin_attractions_path) -%>
