--- a/app/views/admin/cruise_lists/edit.html.erb
+++ b/app/views/admin/cruise_lists/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @cruise_list %> |
-<%= link_to 'Back', cruise_lists_path %>
+<%= link_to 'Back', admin_cruise_lists_path %>
