email sig table

--- a/app/views/static_pages/email_signature.html.erb
+++ b/app/views/static_pages/email_signature.html.erb
@@ -60,3 +60,32 @@
 		</tr>
 	</tbody>
 </table>
+
+
+
+
+<table width="100%" style="background: url(http://www.casinostgc.com/assets/bg-vegas-2f8cbeab032e5d08db7fab84aa380e4fdf4466dc13164b1f371d8145d88e5dc8.jpg); background-size: cover; padding: 10px;">
+	<thead>
+		<tr>
+			<th colspan="4" align="center">
+				<a href="http://www.casinostgc.com/"><img width="50%" src="http://www.casinostgc.com/assets/new-logo-white-71169519ddb9bb0f7e87cba7698f53f80e8dd4e81bf81745a9903243d4915840.png"></a>
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td width="25%" align="center">
+				<a href="http://www.casinostgc.com/events"><img width="100%" src="http://www.casinostgc.com/assets/email_signature/land-d1a0e100a68d91ddd2d8ccf130d419bd283032c1798a49f14dac299107118a7e.png"></a>
+			</td>
+			<td width="25%" align="center">
+				<a href="http://www.casinostgc.com/cruises"><img width="100%" src="http://www.casinostgc.com/assets/email_signature/sea-b9a0f069882acc5b6758e6e38c427a3faa4c82ad844e7623debe399b4b4a3497.png"></a>
+			</td>
+			<td width="25%" align="center">
+				<a href="http://www.casinostgc.com/flights"><img width="100%" src="http://www.casinostgc.com/assets/email_signature/air-b92dea9403179ed3e6796097aa66081c6588f4e38e12d5c473a6f01898fdd45e.png"></a>
+			</td>
+			<td width="25%" align="center">
+				<a href="http://www.casinostgc.com/"><img width="100%" src="http://www.casinostgc.com/assets/email_signature/entertainment-disabled-d11184b67155f12d5099110c298ffac3a09d0cccb5b871aa8e5b4ced6660f14d.png"></a>
+			</td>
+		</tr>
+	</tbody>
+</table>
