--- a/app/views/cruises/index.html.erb
+++ b/app/views/cruises/index.html.erb
@@ -7,19 +7,14 @@
 </div>
 
 <div class="row">
-	<div class="col-sm-7">
-		<div class="list-group">
-			<%= render(CruiseList.limit(nil)) || content_tag(:h4, "No Cruise Lists", class: 'text-center') %>
-		</div>
-	</div>
-	<div class="col-sm-5">
+	<div class="col-sm-8">
 		<div class="table-responsive">
 			<table class="table table-striped">
 				<thead>
 					<tr>
-						<th>Title</th>
+						<th>Itinerary</th>
 						<th>Dates</th>
-						<th>Venue</th>
+						<th>Ship</th>
 					</tr>
 				</thead>
 
@@ -33,6 +28,11 @@
 					<% end %>
 				</tbody>
 			</table>
+		</div>
+	</div>
+	<div class="col-sm-4">
+		<div class="list-group">
+			<%= render(CruiseList.limit(nil)) || content_tag(:h4, "No Cruise Lists", class: 'text-center') %>
 		</div>
 	</div>
 </div>
