--- a/app/views/cruises/show.html.erb
+++ b/app/views/cruises/show.html.erb
@@ -32,7 +32,7 @@
 				</p>
 
 				<p>
-					<%= link_to fa_icon('asterisk', text: 'Attractions'), venue_attractions_path(@cruise.venue), class: 'btn btn-default btn-block btn-sm', data: {toggle: :modal, target: '#defaultModal'} %>
+					<%= link_to fa_icon('asterisk', text: 'Onboard Experience'), venue_attractions_path(@cruise.venue), class: 'btn btn-default btn-block btn-sm', data: {toggle: :modal, target: '#defaultModal'} %>
 				</p>
 			</div>
 		</div>
