--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -2,8 +2,8 @@
 	<div class="modal-content">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			<h4 class="modal-title" id="defaultModalLabel">
-				Attractions
+			<h4 class="modal-title text-center" id="defaultModalLabel">
+				Onboard Experience
 			</h4>
 		</div>
 
