--- a/app/views/cruise_lists/show.html.erb
+++ b/app/views/cruise_lists/show.html.erb
@@ -21,7 +21,7 @@
 					<%= link_to @cruise_list.venue.name, venue_path(@cruise_list.venue) %>
 				</p>
 				<p>
-					<%= link_to fa_icon('asterisk', text: 'Attractions'), venue_attractions_path(@cruise_list.venue), class: 'btn btn-default btn-block btn-sm', data: {toggle: :modal, target: '#defaultModal'} %>
+					<%= link_to fa_icon('asterisk', text: 'Onboard Experience'), venue_attractions_path(@cruise_list.venue), class: 'btn btn-default btn-block btn-sm', data: {toggle: :modal, target: '#defaultModal'} %>
 				</p>
 			</div>
 		</div>
