--- a/app/views/cruises/index.html.erb
+++ b/app/views/cruises/index.html.erb
@@ -3,34 +3,14 @@
 <% end -%>
 
 <div class="row">
-	<%= render 'layouts/featured_images', items: @cruises, heading: :title -%>
+	<%#= render 'layouts/featured_images', items: Cruise.future, heading: :title -%>
 </div>
 
 <div class="row">
-	<div class="col-sm-8">
-		<div class="table-responsive">
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th>Itinerary</th>
-						<th>Dates</th>
-						<th>Ship</th>
-					</tr>
-				</thead>
-
-				<tbody>
-					<% @cruises.future.each do |cruise| %>
-					<tr>
-						<td><%= link_to cruise.title, cruise %></td>
-						<td><%= cruise.date_span %></td>
-						<td><%= link_to cruise.venue.name, venue_path(cruise.venue) %></td>
-					</tr>
-					<% end %>
-				</tbody>
-			</table>
-		</div>
+	<div class="col-sm-7">
+		<%= render @cruises %>
 	</div>
-	<div class="col-sm-4">
+	<div class="col-sm-5">
 		<div class="list-group">
 			<%= render(CruiseList.limit(nil)) || content_tag(:h4, "No Cruise Lists", class: 'text-center') %>
 		</div>
