--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -53,7 +53,7 @@
 		<% if @venue.attractions.any? -%>
 		<section class="panel panel-default">
 			<header class="panel-heading">
-				<h4 class="panel-title">Attractions</h4>
+				<h4 class="panel-title">Onboard Experience</h4>
 			</header>
 			<div class="list-group">
 				<% @venue.attractions.each do |attraction| -%>
