--- a/app/views/admin/ports/_nested_fields.html.erb
+++ b/app/views/admin/ports/_nested_fields.html.erb
@@ -1,18 +1,31 @@
 <li class="nested-fields list-group-item">
 	<div class="list-group-item-text">
 
-		<div class="form-group">
-			<%= f.label :port_id %>
-			<div class="input-group input-group-sm">
-				<%= f.collection_select :port_id, Port.all, :id, :name, {prompt: 'Select Port'}, {class: 'form-control'} %>
-				<span class="input-group-btn">
-					<%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger', data: { confirm: 'Are you sure?' } %>
-				</span>
+		<div class="row">
+			<div class="col-sm-8">
+				<div class="form-group form-group-sm">
+					<%= f.label :port_id %>
+					<%= f.collection_select :port_id, Port.all, :id, :name, {prompt: 'Select Port'}, {class: 'form-control'} %>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="form-group text-center" data-toggle="tooltip" data-placement="bottom" title="This port's image will be used">
+					<%= f.label :featured %>
+					<i class="fa fa-question-circle"></i>
+					<br>
+					<%= f.check_box :featured, class: 'featured-port-of-call-radio' %>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="form-group">
+					<label for="">Delete Port</label>
+					<%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger btn-sm btn-block', data: { confirm: 'Are you sure?' } %>
+				</div>
 			</div>
 		</div>
 
 		<% usec = Time.now.usec -%>
-		<div class="row">
+		<div class="row form-group form-group-sm">
 			<div class="col-sm-6">
 				<%= render 'admin/admin/datepicker', f: f, field: :start_string, label: 'Arriving Time', dtp_class: 'start', usec: usec -%>
 			</div>
