--- a/app/views/cruises/show.html.erb
+++ b/app/views/cruises/show.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
 
 	<aside class="col-sm-4">
-		<% if @cruise.pictures.any? -%>
+		<% if @cruise.pictures.any? && @cruise.featured_port.pictures.any? -%>
 		<figure class="thumbnail">
 			<%= link_to image_tag(@cruise.featured_port.pictures.first.image_url), cruise_pictures_path(@cruise), data: {toggle: :modal, target: '#defaultModal'} -%>
 		</figure>
