--- a/app/views/layouts/_analytics.html.erb
+++ b/app/views/layouts/_analytics.html.erb
@@ -1,5 +1,4 @@
-<% if ENV['EB_ENV'] == 'production' -%>
-
+<% if ENV['APP_ENV'] == 'production' -%>
 <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -10,5 +9,6 @@
 	ga('send', 'pageview');
 
 </script>
-
+<% else -%>
+<!-- google analytics -->
 <% end -%>
