altered jumbo alt tag and surrounded in h1 tag

--- a/app/views/layouts/shortcodes/home/_jumbo.html.erb
+++ b/app/views/layouts/shortcodes/home/_jumbo.html.erb
@@ -1,8 +1,8 @@
 <section class="parallax" style="background-image: url('<%= image_url('bg-vegas.jpg') -%>');">
 	<div class="jumbotron">
-		<div class="container text-center">
-			<%= image_tag( 'new-logo-white.png', alt: 'CASINOS The Grand Collection', class: 'img-responsive', style: 'margin: 0 auto;' ) -%>
-		</div>
+		<h1 class="container text-center h6">
+			<%= image_tag( 'new-logo-white.png', alt: 'Since 1979 CASINOS The Grand Collection, LLC. Domestic, International, and At-Sea Gaming', class: 'img-responsive', style: 'margin: 0 auto;' ) -%>
+		</h1>
 	</div>
 </section>
 <span class="divider"></span>
