apply future scope to featured events

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
 <% end -%>
 
 <div class="row">
-	<%= render 'layouts/featured_images', items: @events, heading: :title -%>
+	<%= render 'layouts/featured_images', items: @events.future, heading: :title -%>
 </div>
 
 <div class="table-responsive">
