smaller upcoming events title font

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -2,7 +2,7 @@
 <div class="list-group-item-text media">
 	<%= content_tag :i, nil, class: "fa fa-fw fa-calendar fa-2x media-object pull-left" -%>
 	<div class="media-body">
-		<h3 class="media-heading">
+		<h3 class="h4 media-heading">
 			<%= event.title -%><br>
 		</h3>
 		<ul class="list-inline text-muted">
