--- a/app/views/layouts/shortcodes/home/_jumbo.html.erb
+++ b/app/views/layouts/shortcodes/home/_jumbo.html.erb
@@ -1,8 +1,9 @@
-<section class="parallax" style="background-image: url('<%= image_url('bg-vegas.jpg') -%>');">
-	<div class="jumbotron">
-		<h1 class="container text-center h6">
-			<%= image_tag( 'new-logo-white.png', alt: 'Since 1979 CASINOS The Grand Collection, LLC. Domestic, International, and At-Sea Gaming', class: 'img-responsive', style: 'margin: 0 auto;' ) -%>
-		</h1>
+<section class="" style="background: #000;">
+	<div class="container">
+		<%= image_tag(
+		'banner-home.jpg',
+		alt: "Exclusive Casino Offers & Custom Gambling Travel Itineraries That You Won't Find Anywhere Else",
+		class: 'img-responsive center-block' ) -%>
 	</div>
 </section>
 <span class="divider"></span>
