--- a/app/views/admin/attractions/_nested_fields.html.erb
+++ b/app/views/admin/attractions/_nested_fields.html.erb
@@ -1,8 +1,14 @@
 <div class="nested-fields form-group">
-	<div class="input-group input-group-sm">
-		<%= f.collection_select :attraction_id, Attraction.all, :id, :name, {prompt: 'Select Attraction'}, {class: 'form-control'} %>
-		<span class="input-group-btn">
-		<%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger', data: { confirm: 'Are you sure?' } %>
-		</span>
-	</div>
+  <div class="input-group input-group-sm">
+    <%= f.hidden_field :position, class: 'position' %>
+    <span class="input-group-btn ">
+      <span class="handle btn btn-primary">
+        <%= fa_icon('sort') %>
+      </span>
+    </span>
+    <%= f.collection_select :attraction_id, Attraction.all, :id, :name, {prompt: 'Select Attraction'}, {class: 'form-control'} %>
+    <span class="input-group-btn">
+      <%= link_to_remove_association fa_icon('remove'), f, class: 'btn btn-danger', data: { confirm: 'Are you sure?' } %>
+    </span>
+  </div>
 </div>
